# learning_dbt

./: .pre-commit-config.yaml  pyproject.toml  test.json
dbtlearning/: dbt_project.yml
dbtlearning/models/: sources.yml
dbtlearning/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
dbtlearning/models/fct/: fct_reviews.sql
dbtlearning/models/mart/: mart_fullmoon_reviews.sql
dbtlearning/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbtlearning/snapshots/: scd_raw_listings.sql
learning_dbt/: dbt_project.yml  manifest.json
learning_dbt/macros/: audits_operation.sql  test_not_null.sql
learning_dbt/models/core/: coucou.ps1  source_core.yml
learning_dbt/models/docs/: source_docs.md
learning_dbt/models/example/: my_second_dbt_model.sql
learning_dbt/models/mart/: source_mart.yml
learning_dbt/models/staging/backoffice_db/: schema.yml  (+1 more)
learning_dbt/seeds/: leagues_code.csv
learning_dbt/tests/generic/: test_is_french_league.sql  test_not_null.sql
path/to/your/: file.txt
powershell/client_scripts/1519f4f9-3a8b-46ad-b7b4-19b2b099452d/: Chrome_Edge_InstallAndConfigure.ps1
powershell/client_scripts/3197edfe-4c0c-4c71-ba18-91de514d4df5/: Chrome_Edge_Firefox_InstallAndConfigure.ps1  Chrome_Edge_InstallAndConfigure.ps1
powershell/client_scripts/529eb260-c82e-11ea-a5b5-6bd9fe6e2a87/: Chrome_Edge_Firefox_InstallAndConfigure.ps1  Chrome_Edge_Uninstall.ps1  Chrome_Uninstall.ps1
powershell/client_scripts/73571111-00f7-49f6-82a4-ae7e2c385b5b/: Chrome_Uninstall.ps1
scripts/: generate_tables_from_csv.py
(+6 files in other folders)
